# Gomoku

./: CMakeLists.txt  Makefile  README.md
include/: board.hpp  game_controller.hpp  game_window.hpp  gui_mode.hpp  hotseat.hpp  resource_manager.hpp  server.hpp  server_connection.hpp  server_mode.hpp  singleplayer.hpp
src/: board.cpp  game_controller.cpp  game_window.cpp  gui_mode.cpp  hotseat.cpp  main.cpp  resource_manager.cpp  server.cpp  server_connection.cpp  server_mode.cpp  singleplayer.cpp
